syntax = "proto3";

package monitor;
option go_package = "smart-monitor/pbtypes/monitor";

import "google/api/annotations.proto";

service MonitorService {
  // Stream từ Agent gửi về Server
  rpc StreamStats (stream StatsRequest) returns (StatsResponse) {
    option (google.api.http) = {
      post: "/v1/stats/stream"
      body: "*"
    };
  }

  // Thêm một RPC unary để lấy stats
  rpc GetStats (StatsRequest) returns (StatsResponse) {
    option (google.api.http) = {
      get: "/v1/stats"
    };
  }
}

message StatsRequest {
  string hostname = 1;
  double cpu = 2;
  double ram = 3;
  double disk = 4;
}

message StatsResponse {
  string message = 1;
  int64 timestamp = 2;
}